# Hexxagon

./: CMakeLists.txt  README.md  main.cpp
game/Entities/: AIComputerPlayer.cpp  AIComputerPlayer.h  Hexagon.cpp  Hexagon.h  Player.cpp  Player.h
game/gamestates/: GameState.h  Menu.cpp  Menu.h  Playing.cpp  Playing.h
game/main/: AnimationEngine.cpp  AnimationEngine.h  Background.cpp  GameEngine.cpp  GameEngine.h  enums.cpp
game/main/gameboard/: FieldOnTheGameBoard.cpp  GameBoard.cpp  GameBoard.h
